@@ -8,6 +8,7 @@ lintian-brush (0.39) UNRELEASED; urgency=medium
   * Update standards version to 4.4.1, no changes needed.
   * Remove unnecessary 'git' usernames from salsa and github URLs.
   * Fix including branch names for GitHub URLs.
+  * Don't remove Built-Using variables that are unrelated to go.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 23 Oct 2019 02:13:20 +0000
 
